--- a/index.html
+++ b/index.html
@@ -147,8 +147,6 @@
           <v-form ref="form" class="col-md-6" 
           v-slot="{ errors }" 
           @submit="onSubmit">
-          {{ errors }}
-
             <div class="mb-3">
               <label for="email" class="form-label">Email</label>
               <v-field id="email" name="email" 
@@ -157,6 +155,7 @@
                   :class="{ 'is-invalid': errors.email }" 
                   placeholder="請輸入 Email" 
                   rules="email|required"
+                  v-model="user.email"
                   ></v-field>
               <error-message name="email" class="invalid-feedback"></error-message>
             </div>
@@ -164,31 +163,35 @@
             <div class="mb-3">
               <label for="name" class="form-label">收件人姓名</label>
               <v-field id="name" name="姓名" type="text" class="form-control" :class="{ 'is-invalid': errors['姓名'] }"
-                placeholder="請輸入姓名" rules="required"></v-field>
+                placeholder="請輸入姓名" rules="required"
+                v-model="user.name"></v-field>
               <error-message name="姓名" class="invalid-feedback"></error-message>
             </div>
 
             <div class="mb-3">
               <label for="tel" class="form-label">收件人電話</label>
               <v-field id="tel" name="電話" type="text" class="form-control" :class="{ 'is-invalid': errors['電話'] }"
-                placeholder="請輸入電話" ></v-field>
+                placeholder="請輸入電話" 
+                :rules="isPhone"
+                v-model="user.phone"></v-field>
               <error-message name="電話" class="invalid-feedback"></error-message>
             </div>
 
             <div class="mb-3">
               <label for="address" class="form-label">收件人地址</label>
               <v-field id="address" name="地址" type="text" class="form-control" :class="{ 'is-invalid': errors['地址'] }"
-                placeholder="請輸入地址" rules="required" ></v-field>
+                placeholder="請輸入地址" rules="required|required" 
+                v-model="user.address" ></v-field>
               <error-message name="地址" class="invalid-feedback"></error-message>
             </div>
 
             <div class="mb-3">
               <label for="message" class="form-label">留言</label>
-              <textarea id="message" class="form-control" cols="30" rows="10" ></textarea>
+              <textarea id="message" class="form-control" cols="30" rows="10" 
+              v-model="user.message"></textarea>
             </div>
             <div class="text-end">
-              <button type="submit" class="btn btn-danger"
-                      >送出訂單</button>
+              <button type="submit" class="btn btn-danger">送出訂單</button>
             </div>
           </v-form>
         </div>
@@ -252,16 +255,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
             integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
             crossorigin="anonymous"></script>
+
     <script src="https://unpkg.com/vue@next"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-loading-overlay@6"></script>
     <link href="https://cdn.jsdelivr.net/npm/vue-loading-overlay@6/dist/css/index.css" rel="stylesheet">
-    <!-- <script src="https://unpkg.com/vee-validate@next"></script>
-    <script src="https://unpkg.com/@vee-validate/i18n@4.1.0"></script>
-    <script src="https://unpkg.com/@vee-validate/rules"></script> -->
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vee-validate/4.5.8/vee-validate.min.js"></script>
+    <script src="https://unpkg.com/vee-validate@next"></script>
+    <script src="https://unpkg.com/@vee-validate/i18n@4.1.0"></script>
+    <script src="https://unpkg.com/@vee-validate/rules"></script>
+
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vee-validate/4.5.8/vee-validate.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@vee-validate/rules@4.5.8/dist/vee-validate-rules.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@vee-validate/i18n@4.5.8/dist/vee-validate-i18n.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@vee-validate/i18n@4.5.8/dist/vee-validate-i18n.min.js"></script> -->
 
     <script src="./index.js" type="module"></script>
 
